--- a/resources/sass/layouts/_landing-about.scss
+++ b/resources/sass/layouts/_landing-about.scss
@@ -23,7 +23,7 @@
 
         display: flex;
 
-        @include respond(phone) {
+        @include respond(tab-port) {
             flex-direction: column;
         }
     }
@@ -32,8 +32,12 @@
         width: 55rem;
         // width: 100%;
 
+        @include respond(tab-port) {
+            width: 50rem;
+        }
+
         @include respond(phone) {
-            
+            width: 40rem;
         }
     }
 
@@ -41,7 +45,7 @@
         display: inline-block;
         position: relative;
 
-        @include respond(phone) {
+        @include respond(tab-port) {
             margin-bottom: 5rem;
             display: flex;
             justify-content: center;
@@ -51,14 +55,14 @@
     &__text {
         margin-left: 7rem;
 
-        @include respond(phone) {
+        @include respond(tab-port) {
             width: 100%;
             margin-left: 0;
             text-align: center;
         }
 
         & > * {
-            @include respond(phone) {
+            @include respond(tab-port) {
                 align-self: center !important;
             }
         }
